--- a/index.html
+++ b/index.html
@@ -9,5 +9,13 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+  <iframe
+    title="Sports Odds Widget"
+    style="width: 20rem; height: 25rem; border: 1px solid black;"
+    src="https://widget.the-odds-api.com/v1/sports/americanfootball_nfl/events/?accessKey=wk_efb6db7000f7b3ea6c7f52bcb71ba13e&bookmakerKeys=draftkings&oddsFormat=american&markets=h2h%2Cspreads%2Ctotals&marketNames=h2h%3AMoneyline%2Cspreads%3ASpreads%2Ctotals%3AOver%2FUnder"
+  ></iframe>
+</body>
+
   </body>
 </html>
+
